Added endpoint, tests and updated swagger documentation
